--- a/scss/_acordion.scss
+++ b/scss/_acordion.scss
@@ -2,16 +2,16 @@
 
 /* Estilos HTML reseñas */
 
-$color_l: rgb(250, 238, 224);
+//Variables
+$color_l: rgb(249, 207, 147);
 $color_m: rgb(249, 228, 200);
-$color_s: rgb(249, 207, 147);
-
-
+$color_s:rgb(250, 238, 224);
+$font_mono:  "Courier New", Courier, monospace;
+$font_size: 3rem;
 $border-radius: 2rem;
 $max-height : 150px;
 
 /* areas de seccion reseñas */
-
 
 
 .accordion{
@@ -22,18 +22,18 @@ $max-height : 150px;
     background: none;
 
     .accordion-button{
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;
+      background-color: $color_l;
+      font-family: $font_mono;
       }
 
     .accordion-collapse{
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;
+      background-color: $color_m;
+      font-family: $font_mono;
       }
 
     .accordion-body{
       display: flex;
-      background-color: $color_l;
+      background-color: $color_s;
         img {
           max-height: $max-height*2;
           width:auto;
@@ -46,7 +46,7 @@ $max-height : 150px;
           img {
             width:50%;
             align-self: center;
-            border-radius: $border-radius +1;
+            border-radius: $border-radius +1,2;
             margin-right: 10px;
             margin-bottom: 10px;
           }
@@ -55,7 +55,7 @@ $max-height : 150px;
             img {
               width:30%;
               align-self: center;
-              border-radius: $border-radius +1;
+              border-radius: $border-radius +1,3;
               margin-right: 10px;
               margin-bottom: 10px;
             }
@@ -64,129 +64,62 @@ $max-height : 150px;
           img {
             width:15%;
             align-self: center;
-            border-radius: $border-radius +2;
+            border-radius: $border-radius +1,4;
             margin-right: 10px;
             margin-bottom: 10px;
           }
         }
     }
-      @media(max-width: 976px) {
-        .accordion-body {
-          display: flex;
-          flex-direction: column;
-          text-align: center;
-        }
-      } 
-      @media(max-width: 576px) {
-        .accordion-body {
-          display: flex;
-          flex-direction: column;
-          text-align: center;
-        }
-      } 
-      @media(max-width: 376px) {
-        .accordion-body {
-          display: flex;
-          flex-direction: column;
-          text-align: center;
-        }
-       
-    
-      .body{
-        h5{
-          margin-bottom:50px;
-        }
-        p{
-          padding: 10px;
-        }
+    @media(max-width: 976px) {
+      .accordion-body {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
       }
-    img {
-      max-height: $max-height*2;
-      width:auto;
-      justify-content: center;
-      border-radius: $border-radius +1;
-      margin-right: 10px;
-      margin-bottom: 10px;
-      @media(max-width: 984px) {
-        img {
-          max-height: $max-height;
-          width:auto;
-          align-self: center;
-          border-radius: $border-radius +1;
-          margin-right: 10px;
-          margin-bottom: 10px;
-        }
-      }   
-        @media(max-width: 576px) {
-          img {
-            max-height: $max-height - 50px;
-            width:auto;
-            align-self: center;
-            border-radius: $border-radius +1;
-            margin-right: 10px;
-            margin-bottom: 10px;
-          }
-       }
-       @media(max-width: 376px) {
-        img {
-          max-height: $max-height - 100px;
-          width:auto;
-          align-self: center;
-          border-radius: $border-radius +2;
-          margin-right: 10px;
-          margin-bottom: 10px;
-        }
-     }
-    }
+    } 
+    @media(max-width: 576px) {
+      .accordion-body {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+      }
+    } 
 
-    
-  }
-
-
-  
   } 
 
-
-
-
-
-
-  
-
   .accordion-item:first-of-type{
-
-    .accordion-button{
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;
-      border-top-left-radius: $border-radius;
-      border-top-right-radius: $border-radius;
-      }
-    .accordion-collapse{
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;
-      }
-    .accordion-body {
-      display: flex;
-      background-color: $color_l;
-    } 
+      .accordion-button{
+        background-color: $color_l;
+        font-family: $font_mono;
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: $border-radius;
+        }
+      .accordion-collapse{
+        background-color: $color_l;
+        font-family: $font_mono;
+        }
+      .accordion-body {
+        display: flex;
+        background-color: $color_m;
+      } 
   }
 
 
   .accordion-item:last-of-type{
 
     .accordion-button {
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;  
+      background-color: $color_l;
+      font-family: $font_mono; 
     }
     .accordion-collapse{
-      background-color: $color_s;
-      font-family: "Courier New", Courier, monospace;
+      background-color: $color_l;
+      font-family: $font_mono;
       border-bottom-left-radius: $border-radius;
       border-bottom-right-radius: $border-radius;
       }
     .accordion-body {
       display: flex;
-      background-color: $color_l;
+      background-color: $color_m;
     }
   }
 
