--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -12,7 +12,7 @@ $border-radius: 2rem;
 $padding: 10px;
 
 
-.seccion__contacto{
+.seccion-contacto{
     display: flex;
     text-align: center;
     justify-content: center;
