Arreglo segun devolcion de entregaa user.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -432,6 +432,7 @@
   background-color: #faeee0;
   border-color: #f9e4c8;
   font-family: "Courier New", Courier, monospace;
+  margin-bottom: 10px;
 }
 
 /* Estilos al contenido del sitio  Formularios*/
