--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -50,6 +50,7 @@ $padding: 10px;
       background-color: $color_s;
       border-color: $color_m;
       font-family: $font_mono;
+      margin-bottom: 10px;
     }
 
     
